assets/sidebar.css
#left_sidebar {
    position: absolute;
    width: 15%;
    height: 100vh;
    float: left;
    display: block;
}

#left_sidebar_fixed {
    position: fixed;
    width: 15%;
    height: 100vh;
    float: left;
    top: 7.5px;
    display: block;
}

.post {
    width: 80%;
    float: right;
}

#inline_sidebar {
    display: none;
}

#root_bullet_point {
    cursor: pointer;
    user-select: none;
}

#root_bullet_point:hover {
    color: white;
}

.home {
    width: 80%;
    float: right;
    position: relative;
    z-index: 10;
}

.bullet_point {
    cursor: default;
    color: black;
}

.bullet_point_selected {
    cursor: default;
    color: blueviolet;
}

.bullet_point:hover {
    color: darkgray;
}

.sidebar li {
    list-style-type: none;
    user-select: none;
}

#home_li {
    list-style-type: initial;
    user-select: none;
}

@media screen and (max-width: 1000px) {
    #left_sidebar {
        display: none;
    }

    #left_sidebar_fixed {
        display: none;
    }

    #inline_sidebar {
        display: block;
    }

    .post {
        width: 100%;
        float: none;
        margin: 0 auto;
    }

    .home {
        width: 100%;
        float: none;
        margin: 0 auto;
    }
}

